--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.webp">
-    <title>Beer Beer Beer</title>
+    <title>Beervana</title>
 </head>
 
 <body>
