se edita width de nav lateral y ajutan titulos

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <i class="fa-brands fa-facebook fa-xl"></i>
                 <i class="fa-brands fa-instagram fa-xl"></i>
             </div>
-            <h3>Todos los derechos reservados.</h3>
+            <h3>Todos los derechos <br> reservados.</h3>
         </div>
 
 
